manifests/scheduler/charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  namespace: ems1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      nodeSelector:
        compass-ci.io/node-role: master
      containers:
      - name: scheduler
        image: scheduler:latest
        imagePullPolicy: IfNotPresent
        command: 
        - sh
        - -c
        - |
          umask 002 && ./scheduler
        ports:
        - containerPort: 3001
        livenessProbe:
          tcpSocket:
            port: 3001
          initialDelaySeconds: 600
          periodSeconds: 3
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          limits:
            memory: 15Gi
          requests:
            memory: 4Gi
        securityContext:
          runAsUser: 1090
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: public
          mountPath: /c/cci/scheduler/public
        - name: scheduler
          mountPath: /srv/cci/scheduler
        - name: defaults
          mountPath: /etc/compass-ci/defaults
        - name: service-env
          mountPath: /etc/compass-ci/service
        - name: local-testbox-env
          mountPath: /etc/compass-ci/scheduler
        - name: register
          mountPath: /etc/compass-ci/register
        - name: localtime
          mountPath: /etc/localtime
          subPath: localtime
        - name: result
          mountPath: /srv/result
        - name: initrd
          mountPath: /srv/initrd
        - name: home-lkp
          mountPath: /home/lkp
        - name: os
          mountPath: /srv/os
        - name: upload-files
          mountPath: /srv/upload-files
        - mountPath: /c/lab-z9
          name: lab-z9
      volumes:
      - name: public
        hostPath:
          path: /srv/tmp/public
      - name: scheduler
        hostPath:
          path: /srv/cci/scheduler
      - name: defaults
        configMap:
          name: compass-ci-defaults
      - name: service-env
        configMap:
          name: service-env
      - name: local-testbox-env
        configMap:
          name: local-testbox-env
      - name: register
        configMap:
          name: register
      - name: localtime
        configMap:
          name: localtime
      - name: result
        hostPath:
          path: /srv/result
      - name: initrd
        hostPath:
          path: /srv/initrd
      - name: os
        hostPath:
          path: /srv/os
      - name: upload-files
        hostPath:
          path: /srv/upload-files
      - name: home-lkp
        hostPath:
          path: /home/lkp
      - name: lab-z9
        hostPath:
          path: /c/lab-z9
