manifests/scheduler/charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  namespace: ems1
  labels:
    app: scheduler
spec:
  selector:
    app: scheduler
  ports:
  - name: http
    port: 80
    targetPort: 3001
  - name: scheduler
    port: 3001
